--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 	border: 1px black solid;
 	width: 95vw;
 	height: 95vh;
+	background-image: url(/images/HogwartsGreatHall.jpg);
 }
 /* .boardGame {
     display: grid;
