--- a/style.css
+++ b/style.css
@@ -81,3 +81,14 @@ img{
 .boardBox:hover {
 	background-color: hsla(30, 90%, 40%, 0.25);
 }
+#butRouge {
+	background-color: #D5D1D2;
+	border-color: black;
+	/* opacity: 0.7; */
+	color: black;
+}
+#butVert {
+	background-color: #91909E;
+	border-color: unset;
+	/* opacity: 0.7; */
+}
