--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 	grid-template-columns: repeat(11, 1fr);
 	grid-template-rows: repeat(10,1fr);
 	border: 1px black solid;
-	width: 95vw;
-	height: 95vh;
+	width: 100vw;
+	height: 100vh;
 	background-image: url(images/HogwartsGreatHall.jpg);
 }
 /* .boardGame {
@@ -91,4 +91,40 @@ img{
 	background-color: #91909E;
 	border-color: unset;
 	/* opacity: 0.7; */
+}
+#modalAnimation {
+	display: flex;
+	background-color: black;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	padding: 2%;
+	top: 45%;
+	z-index: 2;
+	opacity: 0;
+	h1 {
+		color: #FEF159;
+	}
+}
+.animateModal {
+	animation: fade-in 4s linear;
+}
+
+/*********** ANIMATIONS ****************/
+
+@keyframes fade-in {
+  0% {
+	opacity: 0
+  }
+  25% {
+	opacity: 1
+  }
+  75% {
+	opacity: 1
+  }
+  100% {
+	opacity: 0
+  }
 }
