--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #container{
+	position: relative;
 	display: grid;
 	grid-template-columns: repeat(11, 1fr);
 	grid-template-rows: repeat(10,1fr);
@@ -7,11 +8,10 @@
 	height: 100vh;
 	background-image: url(images/HogwartsGreatHall.jpg);
 }
-/* .boardGame {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-} */
+.pawn {
+	position: absolute;
+    transition: left 0.5s ease-in-out, top 0.5s ease-in-out;
+}
 #rouge{
 	grid-column: 1 / span 1;
 	grid-row: 1 / span 1;	
