--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ img{
 	}
 }
 .animateModal {
-	animation: fade-in 4s linear;
+	animation: fade-in 2s linear;
 }
 
 /*********** ANIMATIONS ****************/
@@ -128,3 +128,10 @@ img{
 	opacity: 0
   }
 }
+
+/********* ANIMATIONS CODEPEN ***************/
+
+body { 
+	background: '#1D1E22';
+	overflow: hidden;
+  }
