--- a/style.css
+++ b/style.css
@@ -69,14 +69,17 @@ img{
 .boardBox--black {
     border: 3px solid black;
     background-color: black;
+	background-image: url(images/shadow150.png);
 }
 .boardBox--red {
     border: 2px solid red;
     background-color: red;
+	background-image: url(images/cat170.png);
 }
 .boardBox--green {
     border: 2px solid green;
     background-color: green;
+	background-image: url(images/cat170.png);
 }
 .boardBox:hover {
 	background-color: hsla(30, 90%, 40%, 0.25);
